[gd_scene load_steps=27 format=4 uid="uid://cb5ogx63v83yx"]

[ext_resource type="Script" uid="uid://i47uqdvpsp6c" path="res://Scenes/world.gd" id="1_nnsk1"]
[ext_resource type="TileSet" uid="uid://blkvhyot7eq0s" path="res://Resources/tileset.tres" id="2_k0juu"]
[ext_resource type="Script" uid="uid://ciy264vbij7ne" path="res://Scenes/Enemies/enemy_spawner.gd" id="2_k7acu"]
[ext_resource type="Script" uid="uid://qeek0vpjmjkl" path="res://Scenes/place_preview.gd" id="2_o06y3"]
[ext_resource type="PackedScene" uid="uid://bg1b7wd64d5l7" path="res://Scenes/Turrets/elder.tscn" id="2_rwgxs"]
[ext_resource type="Script" uid="uid://dspmjf11a68lo" path="res://GUI/turret_container.gd" id="6_5ukr8"]
[ext_resource type="Script" uid="uid://dfcoefsm22oc1" path="res://Scenes/description.gd" id="8_hgpy0"]
[ext_resource type="Texture2D" uid="uid://yqrou1dugyux" path="res://Sprites/currency_small.png" id="8_k7acu"]
[ext_resource type="Script" uid="uid://c7jerxoy3b45x" path="res://Scenes/drop_container.gd" id="9_5v1tr"]
[ext_resource type="Texture2D" uid="uid://3iv5g5ceh6gi" path="res://Sprites/UI/percent_bar_frame.png" id="9_7yui6"]
[ext_resource type="Texture2D" uid="uid://bqvfloija1hw8" path="res://Sprites/UI/percent_bar_back.png" id="9_e0ngr"]
[ext_resource type="PackedScene" uid="uid://d0pwau4w45s2f" path="res://Util/pause_menu.tscn" id="10_0fj1v"]
[ext_resource type="Texture2D" uid="uid://vpcm8o8ie7k2" path="res://Sprites/UI/percent_bar_progress.png" id="11_e0ngr"]
[ext_resource type="Script" uid="uid://dkxwt1xc0k8eo" path="res://Scenes/bar_panel.gd" id="12_kn0ld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fj1v"]
bg_color = Color(0, 0, 0, 0.7058824)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_ikia7"]

[sub_resource type="LabelSettings" id="LabelSettings_7yui6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2t4p"]
bg_color = Color(0, 0, 0, 0.37254903)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hgpy0"]
bg_color = Color(0, 0, 0, 0.37254903)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fo5ed"]
bg_color = Color(0, 0, 0, 0.37254903)
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 20.0

[sub_resource type="LabelSettings" id="LabelSettings_5v1tr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5v1tr"]
bg_color = Color(0, 0, 0, 0.37254903)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 15.0
expand_margin_bottom = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_0fj1v"]

[sub_resource type="LabelSettings" id="LabelSettings_kn0ld"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e0ngr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7acu"]
bg_color = Color(0, 0, 0, 0.37254903)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_nnsk1")

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("2_k7acu")

[node name="Markers" type="Node2D" parent="EnemySpawner"]
unique_name_in_owner = true

[node name="Marker2D" type="Marker2D" parent="EnemySpawner/Markers"]

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
wait_time = 2.0

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQABAAAAAAABAAEAAQABAAAAAAACAAIAAQAAAAEAAAADAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAIAAQAAAAAAAAADAAEAAQAAAAAAAAACAAAAAQAAAAEAAAAEAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAMAAQAAAAEAAAAGAAIAAQAAAAEAAAAHAAEAAQABAAEAAAAGAAAAAQABAAEAAAAAAAIAAQAAAAAAAAABAAMAAQABAAAAAAACAAQAAQAAAAEAAAAAAAQAAQAAAAEAAAABAAUAAQABAAEAAAAFAAUAAQABAAAAAAAGAAYAAQAAAAAAAAAHAAcAAQABAAAAAAAIAAgAAQAAAAEAAAAJAAkAAQAAAAEAAAAKAAoAAQABAAEAAAACAAYAAQABAAAAAAADAAUAAQABAAAAAAAEAAYAAQAAAAAAAAADAAcAAQABAAEAAAAAAAYAAQAAAAEAAAABAAcAAQABAAAAAAACAAgAAQABAAAAAAAAAAgAAQABAAAAAAABAAkAAQAAAAAAAAADAAkAAQAAAAEAAAAEAAgAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAgAAQABAAEAAAAFAAkAAQAAAAAAAAAHAAkAAQABAAEAAAAAAAoAAQABAAEAAAACAAoAAQABAAEAAAAEAAoAAQABAAEAAAAGAAoAAQAAAAAAAAAIAAoAAQAAAAEAAAALAAkAAQABAAAAAAAKAAgAAQAAAAAAAAAMAAoAAQAAAAAAAAANAAkAAQABAAEAAAAPAAkAAQAAAAEAAAAOAAoAAQAAAAAAAAAQAAoAAQAAAAEAAAARAAkAAQAAAAEAAAASAAoAAQAAAAAAAAATAAkAAQABAAAAAAASAAgAAQAAAAAAAAATAAcAAQAAAAEAAAASAAYAAQABAAAAAAATAAUAAQAAAAAAAAASAAQAAQAAAAEAAAATAAMAAQABAAEAAAASAAIAAQAAAAEAAAATAAEAAQAAAAEAAAASAAAAAQABAAEAAAARAAEAAQABAAEAAAAQAAAAAQABAAEAAAAQAAIAAQABAAEAAAAPAAEAAQABAAEAAAAOAAAAAQAAAAEAAAAOAAIAAQAAAAAAAAANAAEAAQABAAAAAAAMAAAAAQAAAAAAAAALAAEAAQABAAEAAAAMAAIAAQABAAEAAAAKAAIAAQABAAEAAAAKAAAAAQABAAAAAAAJAAEAAQABAAEAAAAIAAAAAQABAAAAAAAIAAIAAQAAAAAAAAAJAAMAAQABAAAAAAAIAAQAAQABAAAAAAAHAAMAAQABAAEAAAAKAAQAAQAAAAEAAAAJAAUAAQABAAEAAAAHAAUAAQABAAAAAAAIAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAKAAYAAQAAAAAAAAALAAcAAQAAAAEAAAAMAAYAAQABAAAAAAALAAUAAQABAAAAAAAMAAQAAQABAAAAAAANAAUAAQABAAEAAAAOAAQAAQABAAAAAAANAAMAAQAAAAAAAAALAAMAAQABAAAAAAAPAAMAAQABAAEAAAARAAMAAQAAAAEAAAAQAAQAAQABAAAAAAARAAUAAQAAAAEAAAAPAAUAAQAAAAAAAAAQAAYAAQABAAAAAAARAAcAAQAAAAEAAAAQAAgAAQABAAAAAAAPAAcAAQAAAAAAAAAOAAYAAQABAAEAAAANAAcAAQABAAAAAAAOAAgAAQAAAAEAAAAMAAgAAQABAAEAAAAGAAQAAQABAAEAAAAAAAEAAQAAAAAAAAAAAAMAAQABAAEAAAAAAAUAAQABAAEAAAAAAAcAAQABAAEAAAAAAAkAAQABAAEAAAABAAAAAQAAAAEAAAABAAIAAQABAAEAAAABAAQAAQAAAAAAAAABAAYAAQABAAEAAAABAAgAAQAAAAEAAAABAAoAAQAAAAAAAAACAAEAAQAAAAAAAAACAAMAAQABAAEAAAACAAUAAQAAAAEAAAACAAcAAQABAAAAAAACAAkAAQABAAEAAAADAAAAAQABAAEAAAADAAIAAQAAAAEAAAADAAQAAQAAAAAAAAADAAYAAQAAAAAAAAADAAgAAQAAAAEAAAADAAoAAQAAAAEAAAAEAAEAAQAAAAAAAAAEAAMAAQABAAAAAAAEAAUAAQAAAAAAAAAEAAcAAQABAAAAAAAEAAkAAQAAAAEAAAAFAAAAAQABAAAAAAAFAAIAAQABAAEAAAAFAAQAAQAAAAEAAAAFAAYAAQABAAEAAAAFAAgAAQAAAAEAAAAFAAoAAQABAAEAAAAGAAEAAQAAAAEAAAAGAAMAAQABAAAAAAAGAAUAAQAAAAEAAAAGAAcAAQABAAAAAAAGAAkAAQABAAEAAAAHAAAAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAQAAQABAAEAAAAHAAYAAQAAAAEAAAAHAAgAAQABAAEAAAAHAAoAAQAAAAEAAAAIAAEAAQAAAAEAAAAIAAMAAQABAAEAAAAIAAUAAQABAAAAAAAIAAcAAQAAAAAAAAAIAAkAAQAAAAEAAAAJAAAAAQABAAEAAAAJAAIAAQABAAEAAAAJAAQAAQABAAAAAAAJAAYAAQAAAAEAAAAJAAgAAQABAAAAAAAJAAoAAQAAAAAAAAAKAAEAAQABAAAAAAAKAAMAAQABAAAAAAAKAAUAAQABAAEAAAAKAAcAAQAAAAAAAAAKAAkAAQAAAAAAAAALAAAAAQAAAAEAAAALAAIAAQABAAAAAAALAAQAAQABAAEAAAALAAYAAQAAAAEAAAALAAgAAQABAAAAAAALAAoAAQABAAEAAAAMAAEAAQABAAAAAAAMAAMAAQABAAEAAAAMAAUAAQAAAAEAAAAMAAcAAQAAAAAAAAAMAAkAAQAAAAEAAAANAAAAAQABAAAAAAANAAIAAQABAAAAAAANAAQAAQABAAAAAAANAAYAAQAAAAEAAAANAAgAAQABAAAAAAANAAoAAQAAAAEAAAAOAAEAAQAAAAAAAAAOAAMAAQABAAAAAAAOAAUAAQABAAEAAAAOAAcAAQABAAEAAAAOAAkAAQABAAEAAAAPAAAAAQAAAAEAAAAPAAIAAQAAAAEAAAAPAAQAAQABAAAAAAAPAAYAAQABAAAAAAAPAAgAAQABAAAAAAAPAAoAAQABAAAAAAAQAAEAAQABAAEAAAAQAAMAAQABAAAAAAAQAAUAAQABAAAAAAAQAAcAAQAAAAAAAAAQAAkAAQAAAAEAAAARAAAAAQAAAAAAAAARAAIAAQAAAAAAAAARAAQAAQAAAAAAAAARAAYAAQAAAAEAAAARAAgAAQAAAAEAAAARAAoAAQABAAAAAAASAAEAAQAAAAEAAAASAAMAAQABAAAAAAASAAUAAQABAAAAAAASAAcAAQAAAAAAAAASAAkAAQAAAAEAAAATAAAAAQAAAAAAAAATAAIAAQAAAAEAAAATAAQAAQAAAAEAAAATAAYAAQAAAAAAAAATAAgAAQABAAAAAAATAAoAAQAAAAEAAAATAAsAAQAAAAAAAAASAAsAAQABAAEAAAARAAsAAQABAAEAAAAQAAsAAQAAAAAAAAAPAAsAAQABAAEAAAAOAAsAAQAAAAEAAAANAAsAAQABAAEAAAAMAAsAAQAAAAAAAAALAAsAAQABAAAAAAAKAAsAAQAAAAEAAAAJAAsAAQABAAEAAAAIAAsAAQAAAAEAAAAHAAsAAQAAAAEAAAAGAAsAAQAAAAEAAAAFAAsAAQABAAEAAAAEAAsAAQABAAAAAAADAAsAAQAAAAEAAAACAAsAAQAAAAEAAAABAAsAAQAAAAAAAAAAAAsAAQAAAAEAAAD/////AQAAAAAAAAAAAP//AQAAAAEAAAABAP//AQAAAAAAAAACAP//AQAAAAEAAAADAP//AQAAAAAAAAAEAP//AQABAAAAAAAFAP//AQAAAAEAAAAGAP//AQAAAAEAAAAHAP//AQABAAEAAAAIAP//AQABAAAAAAAJAP//AQABAAAAAAAKAP//AQAAAAEAAAALAP//AQABAAEAAAAMAP//AQAAAAEAAAANAP//AQAAAAEAAAAOAP//AQAAAAEAAAAPAP//AQABAAEAAAAQAP//AQABAAAAAAD//wAAAQABAAEAAAD//wEAAQAAAAAAAAD//wIAAQAAAAEAAAD//wMAAQAAAAAAAAD//wQAAQAAAAEAAAD//wUAAQABAAAAAAD//wYAAQABAAEAAAD//wcAAQABAAAAAAD//wgAAQABAAEAAAD//wkAAQAAAAAAAAD//woAAQABAAAAAAD//wsAAQAAAAEAAAD//wwAAQABAAAAAAAAAAwAAQAAAAAAAAABAAwAAQAAAAAAAAACAAwAAQAAAAAAAAADAAwAAQAAAAAAAAAEAAwAAQABAAAAAAAFAAwAAQAAAAEAAAAGAAwAAQABAAEAAAAHAAwAAQAAAAAAAAAIAAwAAQABAAEAAAAJAAwAAQABAAAAAAAKAAwAAQAAAAAAAAALAAwAAQABAAAAAAAMAAwAAQABAAEAAAANAAwAAQABAAAAAAAOAAwAAQABAAEAAAAPAAwAAQABAAEAAAAQAAwAAQABAAEAAAARAAwAAQABAAAAAAASAAwAAQAAAAAAAAATAAwAAQAAAAAAAAAUAAwAAQABAAEAAAAUAAsAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAkAAQAAAAAAAAAUAAgAAQABAAEAAAAUAAcAAQAAAAAAAAAUAAYAAQAAAAAAAAAUAAUAAQAAAAEAAAAUAAQAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAEAAQAAAAAAAAAUAAAAAQABAAEAAAAUAP//AQAAAAEAAAATAP//AQAAAAAAAAASAP//AQABAAEAAAARAP//AQABAAAAAAA=")
tile_set = ExtResource("2_k0juu")

[node name="Grass" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_k0juu")

[node name="Boulders" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_k0juu")

[node name="Objects" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="Elder" parent="Objects" instance=ExtResource("2_rwgxs")]
position = Vector2(288, 161)
input_pickable = false

[node name="RangeChecker" type="Node2D" parent="Objects"]
unique_name_in_owner = true
visible = false
script = ExtResource("2_o06y3")
color = Color(0.36588717, 0.61218995, 0.71056473, 1)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
use_edge_connections = false

[node name="PlacePreview" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("2_o06y3")

[node name="Warnings" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="WinPopup" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="Panel" parent="WinPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0fj1v")

[node name="VBoxContainer" type="VBoxContainer" parent="WinPopup"]
offset_left = 128.0
offset_top = 124.0
offset_right = 512.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="WinPopup/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
text = "You have successfully revitalized this section of the forest!
Do you want to select a different map or continue playing on this section?"
label_settings = SubResource("LabelSettings_ikia7")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="WinPopup/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
text = "(You can exit anytime using the pause menu)"
label_settings = SubResource("LabelSettings_7yui6")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WinPopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MapSelect" type="Button" parent="WinPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play a different map"

[node name="Continue" type="Button" parent="WinPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keep going"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurretContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.5
offset_top = -36.0
offset_right = 29.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_bottom = 10
script = ExtResource("6_5ukr8")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TurretContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Description" type="PanelContainer" parent="CanvasLayer/TurretContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t2t4p")
script = ExtResource("8_hgpy0")

[node name="Box" type="VBoxContainer" parent="CanvasLayer/TurretContainer/VBoxContainer/Description"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/TurretContainer/VBoxContainer/Description/Box"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hgpy0")

[node name="Name" type="Label" parent="CanvasLayer/TurretContainer/VBoxContainer/Description/Box/PanelContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/TurretContainer/VBoxContainer/Description/Box"]
layout_mode = 2

[node name="Info" type="Label" parent="CanvasLayer/TurretContainer/VBoxContainer/Description/Box"]
layout_mode = 2
autowrap_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/TurretContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fo5ed")

[node name="FoldableContainer" type="FoldableContainer" parent="CanvasLayer/TurretContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
folded = true
title = "Units"
title_position = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TurretContainer/VBoxContainer/PanelContainer/FoldableContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/TurretContainer/VBoxContainer/PanelContainer/FoldableContainer/VBoxContainer"]
layout_mode = 2
text = "Start dragging to place a unit."
label_settings = SubResource("LabelSettings_5v1tr")
horizontal_alignment = 1

[node name="Buttons" type="GridContainer" parent="CanvasLayer/TurretContainer/VBoxContainer/PanelContainer/FoldableContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="Score" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_bottom = 36.0
grow_horizontal = 0
theme_override_constants/margin_right = 10

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Score"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5v1tr")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Score/PanelContainer"]
layout_mode = 2

[node name="Wave" type="Label" parent="CanvasLayer/Score/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Wave 0"
label_settings = SubResource("LabelSettings_0fj1v")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Score/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Score/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_k7acu")
stretch_mode = 2
flip_v = true

[node name="PointsLabel" type="Label" parent="CanvasLayer/Score/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"

[node name="BarContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_right = 178.5
offset_bottom = 69.0
grow_horizontal = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GrassPercent" type="TextureProgressBar" parent="CanvasLayer/BarContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_filter = 0
step = 0.1
texture_under = ExtResource("9_e0ngr")
texture_over = ExtResource("9_7yui6")
texture_progress = ExtResource("11_e0ngr")
texture_progress_offset = Vector2(28, 0)

[node name="CompleteLabel" type="Label" parent="CanvasLayer/BarContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_vertical = 0
text = "Complete!"
label_settings = SubResource("LabelSettings_kn0ld")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BarPanel" type="Panel" parent="CanvasLayer/BarContainer"]
custom_minimum_size = Vector2(352, 64)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_e0ngr")
script = ExtResource("12_kn0ld")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -41.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="WaveButton" type="Button" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Next Wave"

[node name="DropContainer" type="MarginContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -41.0
offset_right = 102.0
grow_vertical = 0
mouse_filter = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("9_5v1tr")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/DropContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k7acu")

[node name="Cancel" type="Label" parent="CanvasLayer/DropContainer"]
layout_mode = 2
text = "Drop here to cancel"

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer"]

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="PauseMenu" parent="PauseLayer" instance=ExtResource("10_0fj1v")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = -110.0
offset_right = 152.5
offset_bottom = 110.0

[node name="ColorRect" parent="PauseLayer/PauseMenu/Control" index="0"]
custom_minimum_size = Vector2(640, 1000)
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = -170.0
offset_bottom = 830.0
grow_vertical = 1
color = Color(0, 0, 0, 0.7058824)

[node name="MapSelect" type="Button" parent="PauseLayer/PauseMenu/MarginContainer2/HBoxContainer" index="1"]
layout_mode = 2
text = "Play a different map"

[node name="Control2" type="Control" parent="PauseLayer/PauseMenu"]
layout_mode = 2

[connection signal="wave_cleared" from="EnemySpawner" to="." method="_on_enemy_spawner_wave_cleared"]
[connection signal="timeout" from="EnemySpawner/SpawnTimer" to="EnemySpawner" method="_on_spawn_timer_timeout"]
[connection signal="pressed" from="WinPopup/VBoxContainer/HBoxContainer/MapSelect" to="." method="_on_map_select_pressed"]
[connection signal="pressed" from="WinPopup/VBoxContainer/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="dragging_turret" from="CanvasLayer/TurretContainer" to="." method="_on_turret_container_dragging_turret"]
[connection signal="folding_changed" from="CanvasLayer/TurretContainer/VBoxContainer/PanelContainer/FoldableContainer" to="." method="_on_foldable_container_folding_changed"]
[connection signal="mouse_entered" from="CanvasLayer/BarContainer/BarPanel" to="." method="_on_bar_panel_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/BarContainer/BarPanel" to="." method="_on_bar_panel_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/WaveButton" to="." method="_on_wave_button_pressed"]
[connection signal="cancel_placement" from="CanvasLayer/DropContainer" to="." method="_on_drop_container_cancel_placement"]
[connection signal="pressed" from="PauseLayer/PauseMenu/MarginContainer2/HBoxContainer/MapSelect" to="." method="_on_map_select_pressed"]

[editable path="PauseLayer/PauseMenu"]
